--- a/okhttp-client-spring-boot-starter-test/pom.xml
+++ b/okhttp-client-spring-boot-starter-test/pom.xml
@@ -11,5 +11,36 @@
 
   <artifactId>okhttp-client-spring-boot-starter-test</artifactId>
 
+  <dependencies>
+    <dependency>
+      <artifactId>okhttp-client-spring-boot-starter</artifactId>
+      <groupId>com.wellzhang</groupId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 
 </project>
